refactor: remove AI recommendation endpoint and its associated OpenAPI documentation from the controller.